# frequenz-client-dispatch-python

./: .cookiecutter-replay.json  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml  versions.json
.github/: keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/containers/test-installation/: Dockerfile
.github/workflows/: ci.yaml
latest/: index.html
latest-dev/: 404.html  index.html
latest-dev/CONTRIBUTING/: index.html
latest-dev/_overrides/: main.html
latest-dev/reference/SUMMARY/: index.html
latest-dev/reference/frequenz/client/dispatch/: index.html
latest-dev/reference/frequenz/client/dispatch/test/: index.html
latest-dev/reference/frequenz/client/dispatch/test/client/: index.html
latest-dev/reference/frequenz/client/dispatch/test/fixtures/: index.html
latest-dev/reference/frequenz/client/dispatch/test/generator/: index.html
latest-dev/reference/frequenz/client/dispatch/types/: index.html
latest/CONTRIBUTING/: index.html
latest/SUMMARY/: index.html
latest/_overrides/: main.html
latest/reference/SUMMARY/: index.html
latest/reference/frequenz/client/dispatch/: index.html
latest/reference/frequenz/client/dispatch/test/: index.html
latest/reference/frequenz/client/dispatch/test/client/: index.html
latest/reference/frequenz/client/dispatch/test/fixtures/: index.html
latest/reference/frequenz/client/dispatch/test/generator/: index.html
latest/reference/frequenz/client/dispatch/types/: index.html
src/frequenz/client/dispatch/: __init__.py  __main__.py  _cli_types.py  _client.py  _internal_types.py  types.py
src/frequenz/client/dispatch/test/: _service.py  client.py  generator.py
tests/: test_dispatch_cli.py  test_dispatch_client.py  test_dispatch_types.py
v0/: 404.html
v0-dev/: 404.html  index.html
v0-dev/CONTRIBUTING/: index.html
v0-dev/SUMMARY/: index.html
v0-dev/_overrides/: main.html
v0-dev/reference/SUMMARY/: index.html
v0-dev/reference/frequenz/client/dispatch/: index.html
v0-dev/reference/frequenz/client/dispatch/test/: index.html
v0-dev/reference/frequenz/client/dispatch/test/client/: index.html
v0-dev/reference/frequenz/client/dispatch/test/fixtures/: index.html
v0-dev/reference/frequenz/client/dispatch/test/generator/: index.html
v0-dev/reference/frequenz/client/dispatch/types/: index.html
v0.0-dev/reference/frequenz/client/dispatch/: index.html
v0.0-dev/search/: search_index.json
v0.1/: 404.html  objects.inv
v0.1-dev/reference/frequenz/client/dispatch/: index.html
v0.1-dev/reference/frequenz/client/dispatch/types/: index.html
v0.1-dev/search/: search_index.json
v0.1/CONTRIBUTING/: index.html
v0.1/SUMMARY/: index.html
v0.2/: 404.html
v0.2-dev/: 404.html  index.html
v0.2-dev/CONTRIBUTING/: index.html
v0.2-dev/SUMMARY/: index.html
v0.2-dev/reference/SUMMARY/: index.html
v0.2-dev/reference/frequenz/client/dispatch/: index.html
v0.2-dev/reference/frequenz/client/dispatch/test/: index.html
v0.2-dev/reference/frequenz/client/dispatch/test/client/: index.html
v0.2-dev/reference/frequenz/client/dispatch/test/generator/: index.html
v0.2-dev/reference/frequenz/client/dispatch/types/: index.html
v0.2-dev/search/: search_index.json
v0.2/CONTRIBUTING/: index.html
v0.2/SUMMARY/: index.html
v0.2/reference/SUMMARY/: index.html
v0.2/reference/frequenz/client/dispatch/: index.html
v0.2/reference/frequenz/client/dispatch/test/: index.html
v0.2/reference/frequenz/client/dispatch/test/client/: index.html
v0.2/reference/frequenz/client/dispatch/test/generator/: index.html
v0.2/reference/frequenz/client/dispatch/types/: index.html
v0.3/: objects.inv
v0.3/SUMMARY/: index.html
v0.3/reference/SUMMARY/: index.html
v0.3/reference/frequenz/client/dispatch/types/: index.html
v0.4-dev/: 404.html  index.html  objects.inv
v0.4-dev/reference/frequenz/client/dispatch/: index.html
v0.4-dev/reference/frequenz/client/dispatch/test/: index.html
v0.4-dev/search/: search_index.json
v0.4/CONTRIBUTING/: index.html
v0.4/search/: search_index.json
v0.5-dev/: index.html
v0.5-dev/CONTRIBUTING/: index.html
v0.5-dev/SUMMARY/: index.html
v0.5-dev/reference/frequenz/client/dispatch/: index.html
v0.5-dev/reference/frequenz/client/dispatch/types/: index.html
v0.5-dev/search/: search_index.json
v0.5/reference/frequenz/client/dispatch/types/: index.html
v0.6-dev/: 404.html  objects.inv
v0.6-dev/CONTRIBUTING/: index.html
v0.6-dev/SUMMARY/: index.html
v0.6-dev/reference/SUMMARY/: index.html
v0.6-dev/reference/frequenz/client/dispatch/: index.html
v0.6-dev/reference/frequenz/client/dispatch/test/: index.html
v0.6-dev/reference/frequenz/client/dispatch/types/: index.html
v0.6-dev/search/: search_index.json
v0.6/reference/frequenz/client/dispatch/: index.html
v0.6/reference/frequenz/client/dispatch/types/: index.html
v0.7-dev/: 404.html
v0.7-dev/reference/frequenz/client/dispatch/: index.html
v0.7-dev/reference/frequenz/client/dispatch/types/: index.html
v0.7-dev/search/: search_index.json
v0.7/CONTRIBUTING/: index.html
v0.7/SUMMARY/: index.html
v0.7/reference/frequenz/client/dispatch/: index.html
v0.7/search/: search_index.json
v0.8-dev/: 404.html  index.html
v0.8-dev/reference/SUMMARY/: index.html
v0.8-dev/reference/frequenz/client/dispatch/: index.html
v0.8-dev/reference/frequenz/client/dispatch/test/: index.html
v0.8-dev/reference/frequenz/client/dispatch/types/: index.html
v0.8-dev/search/: search_index.json
v0/CONTRIBUTING/: index.html
v0/SUMMARY/: index.html
v0/_overrides/: main.html
v0/reference/SUMMARY/: index.html
v0/reference/frequenz/client/dispatch/: index.html
v0/reference/frequenz/client/dispatch/test/: index.html
v0/reference/frequenz/client/dispatch/types/: index.html
(+21 files in other folders)
