# License: MIT
# Copyright © 2024 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = [
  "setuptools == 68.1.0",
  "setuptools_scm[toml] == 7.1.0",
  "frequenz-repo-config[lib] == 0.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-dispatch-client"
description = "Dispatch API client for Python"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "lib", "library", "dispatch-client", "dispatch", "client", "api", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  "typing-extensions >= 4.6.1, < 5",
  # Use direct commit until release
  "frequenz-api-dispatch @ git+https://github.com/frequenz-floss/frequenz-api-dispatch.git@223315c",
#  "frequenz-api-dispatch >= 0.13.0, < 0.14",
  # Directly use unreleased commit until the next release
  "frequenz-client-base @ git+https://github.com/frequenz-floss/frequenz-client-base-python.git@57d3093",
#  "frequenz-client-base >= 0.1.0, < 0.2",
  # Directly use unreleased commit until the first release
  "frequenz-client-common @ git+https://github.com/frequenz-floss/frequenz-client-common-python.git@5e6e7b7",
#  "frequenz-client-common == 0.1.0",
  "grpcio >= 1.54.2, < 2"
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 7.0.0",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.4.1",
  "pydocstyle == 6.3.0",
]
dev-formatting = ["black == 24.2.0", "isort == 5.13.2"]
dev-mkdocs = [
  "black == 24.2.0",
  "Markdown==3.5.2",
  "mike == 2.0.0",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-macros-plugin == 1.0.5",
  "mkdocs-material == 9.5.10",
  "mkdocstrings[python] == 0.24.0",
  "frequenz-repo-config[lib] == 0.9.0",
]
dev-mypy = [
  "mypy == 1.8.0",
  "types-Markdown == 3.5.0.20240129",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-dispatch-client[dev-mkdocs,dev-noxfile,dev-pytest]",
  "grpc-stubs == 1.53.0.2",
]
dev-noxfile = [
  "nox == 2023.4.22",
  "frequenz-repo-config[lib] == 0.9.0",
]
dev-pylint = [
  "pylint == 3.0.3",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-dispatch-client[dev-mkdocs,dev-noxfile,dev-pytest]",
  "frequenz-api-dispatch @ git+https://github.com/frequenz-floss/frequenz-api-dispatch.git@223315c",
]
dev-pytest = [
  "pytest == 8.0.1",
  "frequenz-repo-config[extra-lint-examples] == 0.9.0",
  "pytest-mock == 3.12.0",
  "pytest-asyncio == 0.23.5",
  "async-solipsism == 0.5",
  "hypothesis == 6.98.9",
]
dev = [
  "frequenz-dispatch-client[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Documentation = "https://frequenz-floss.github.io/frequenz-client-dispatch-python/"
Changelog = "https://github.com/frequenz-floss/frequenz-client-dispatch-python/releases"
Issues = "https://github.com/frequenz-floss/frequenz-client-dispatch-python/issues"
Repository = "https://github.com/frequenz-floss/frequenz-client-dispatch-python"
Support = "https://github.com/frequenz-floss/frequenz-client-dispatch-python/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  "too-many-return-statements",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by flake8
  "line-too-long",
  "redefined-outer-name",
  "unnecessary-lambda-assignment",
  "unused-import",
  "unused-variable",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
# This option disables mypy cache, and it is sometimes useful to enable it if
# you are getting weird intermittent error, or error in the CI but not locally
# (or vice versa). In particular errors saying that type: ignore is not
# used but getting the original ignored error when removing the type: ignore.
# See for example: https://github.com/python/mypy/issues/2960
#no_incremental = true
packages = ["frequenz.client.dispatch"]
strict = true

[[tool.mypy.overrides]]
module = ["mkdocs_macros.*", "sybil", "sybil.*"]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
